			<< Lingua::AR::Db - Andrea Benazzo >>

28/04/2006      2.0
->major release based on the MultiDimensional DB

18/09/2005	1.5.2
->little fixes here and there

29/06/2005	1.52
->now the test will delete the created dir

25/06/2005	1.51
->added tests

24/06/2005	1.5
->modified some little parts in Lingua::AR::Word, so I needed to change them even in Lingua::AR::Db

23/06/2005	1.4
->changed namespace into Lingua::AR::

21/06/05	1.3
->Created this OO module for managing the DB