@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Lingua-AR-Db
-version:      2.0
+version:      2.10
 version_from: lib/Lingua/AR/Db.pm
 installdirs:  site
 requires:
